# paritycheck

./: .gitignore  CMakeLists.txt  README.md  enc.c  enc.h  main.c
src/: dec.c  dec.h  enc.c  enc.h  globals.h  main.c
